samples/_failures_safe/1761045493_e230aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6c25c345.c: In function ‘main’:
./samples/SAFE/__tmp_6c25c345.c:163:9: error: expected expression at end of input
  163 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_6c25c345.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6c25c345.c:163:9: error: expected declaration or statement at end of input
